<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2">

        <!--endocare logo-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7">

            <ImageView
                android:layout_width="@dimen/sp_200"
                android:layout_height="@dimen/ssp_95"
                android:layout_centerInParent="true"
                android:src="@drawable/loginlogo"></ImageView>
        </RelativeLayout>

        <!--login screen heading-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.3"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/dp15"
            android:layout_marginEnd="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/metro_polismed_medium_font"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/please_enter_your_details_to_login"
                android:textSize="@dimen/sp15"></TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <ImageView
                    android:id="@+id/ivUserName"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/call_login_icon"></ImageView>

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:paddingStart="5dp"
                    android:textSize="12sp"
                    android:text="1234567890"
                    android:hint="@string/hint_username"
                    android:fontFamily="@font/metropolis_medium"
                    android:layout_toEndOf="@+id/ivUserName" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp">

                <ImageView
                    android:id="@+id/ivPassword"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="0dp"
                    android:src="@drawable/password_login_icon"
                    android:layout_alignParentStart="true" />


                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_toRightOf="@+id/ivPassword"
                    android:layout_toEndOf="@+id/ivPassword"
                    android:fontFamily="@font/metropolis_medium"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:text="111111"
                    android:paddingStart="5dp"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/etPassword"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:padding="10dp"
                    android:text="@string/forget_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp13" />

            </RelativeLayout>

            <include layout="@layout/butto_layout" />

            <TextView
                android:id="@+id/tvNewUser"
                android:layout_width="match_parent"
                android:layout_below="@+id/etPassword"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/are_you_new_user_register"
                android:textColor="@color/black"
                android:textSize="@dimen/sp13" />
        </LinearLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>