<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.instruction_activity.InstructionActivity">

    <TextView
        android:id="@+id/txtlhd"
        android:text="@string/lefthanddevice"
        android:padding="@dimen/dp10"
        android:fontFamily="@font/metropolisregular"
        android:textSize="@dimen/sp15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spn_left_hand_device_spinner"
        android:layout_below="@+id/txtlhd"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_left_hand_device_selected"
        android:layout_below="@id/spn_left_hand_device_spinner"
        android:layout_width="match_parent"
        android:padding="@dimen/dp10"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/metropolisregular"
        android:textSize="@dimen/sp15"
        android:textColor="@color/red"
        android:text="LEFT HAND DEVICE SELECTED"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txtrhd"
        android:text="@string/righthanddevice"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/tv_left_hand_device_selected"
        android:padding="@dimen/dp10"
        android:fontFamily="@font/metropolisregular"
        android:textSize="@dimen/sp15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/spn_right_hand_device_spinner"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/txtrhd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_right_hand_device_selected"
        android:layout_marginBottom="15dp"
        android:layout_below="@+id/spn_right_hand_device_spinner"
        android:padding="@dimen/dp10"
        android:fontFamily="@font/metropolisregular"
        android:textSize="@dimen/sp15"
        android:textColor="@color/red"
        android:text="RIGH HAND DEVICE SELECTED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/starttretment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/yellow"
                android:text="@string/starttreatment"
                android:textSize="16sp" />

        </LinearLayout>

</RelativeLayout>
